# octoprobe

./: .gitignore  README.md  README.rst  octoprobe.code-workspace  pyproject.toml  requirements_doc.txt
.github/: docs.yml
design/: terms.md
docs/: README.rst  api.rst  big_picture.rst  index.rst  index_top.rst  run_sphinx_copy.sh  sphinx_implementation.rst  sphinx_intersphinx.rst
docs/design/: op_command.rst  terms.rst
docs/rst_sandbox/: experiment_section_1.rst  experiment_section_2.rst  experiment_section_3.rst  experiment_section_4.rst  index.rst
docs/sphinx/: index.rst  intersphinx.rst  theme_evaluation.rst
docs/usb/: 10_linux_stability_issues.rst  20_hubs.rst  30_usb_host.rst  index.rst
octoprobe/: lib_mpremote.py  lib_tentacle_dut.py  lib_tentacle_infra.py  lib_tentacle_infra_rp2.py  util_cached_git_repo.py  util_constants.py  util_mcu_pyboard.py  util_mcu_rp2.py  util_subprocess.py  util_usb_serial.py
octoprobe/scripts/: commissioning.py  install.py
octoprobe/util_pytest/: util_resultdir.py
src/octoprobe/: lib_mpremote.py  lib_tentacle.py  lib_tentacle_debugprobe.py  lib_tentacle_dut.py  lib_tentacle_infra.py  lib_tentacle_infra_pico.py  lib_tentacle_infra_rp2.py  lib_testbed.py  octoprobe.py  udev_placeholder.py  util_baseclasses.py  util_cached_git_repo.py  util_constants.py  util_constants_uart_flakiness.py  util_dut_mcu.py  util_dut_programmer_abc.py  util_dut_programmers.py  util_firmware_spec.py  util_ftrace_marker.py  util_jinja2.py  util_journalctl.py  util_mcu.py  util_mcu_debugprobe.py  util_mcu_esp.py  util_mcu_esp32C3.py  util_mcu_esp8266.py  util_mcu_mimxrt.py  util_mcu_nrf.py  util_mcu_pico.py  util_mcu_picoprobe.py  util_mcu_pyboard.py  util_mcu_rp2.py  util_mcu_samd.py  util_micropython_boards.py  util_power.py  util_pyudev.py  util_pyudev_monitor.py  util_serialnumber.py  util_subprocess.py  util_tentacle_discovery.py  (+4 more)
src/octoprobe/scripts/: commissioning.py  commissioning_logging.json  install.py  op.py  op_bootmode.py  op_exec_infra.py  op_flash.py  op_install.py  op_logging.py  typer_query.py  util_bootmode.py
src/octoprobe/udev/: 49-octoprobe_cp210x.rules  82-octoprobe_nucleo_wb55.rules  82-octoprobe_picotool.rules  82-octoprobe_teensy_loader_cli.rules  82-octoprobe_usbhubctl.rules
src/octoprobe/usb_tentacle/: usb_baseclasses.py  usb_constants.py  usb_tentacle.py
src/octoprobe/util_pytest/: util_func_logger.py  util_logging.py  util_logging_config.json  util_logging_handler_color.py  util_resultdir.py  util_vscode.py
src/octoprobe/util_rst/: rst_sections_level_updown.py  rst_sections_validator.py
src/octoprobe/util_tentacle_label/: label_data.py  label_renderer.py
tests/: test_git_spec.py  test_github.py  test_usb_tentacle.py
